Importing default ag-grid CSS to solve scrollbar issue

--- a/app/NovaWeb/src/styles/partials/_aggrid.scss
+++ b/app/NovaWeb/src/styles/partials/_aggrid.scss
@@ -1,24 +1,19 @@
 ﻿.project-tree {
-  $padding-top: 5px;
-
   .ag-grid {
-    font-size: $font-size-smallest;
     height: 100%;
+    padding-top: 5px;
 
-    #agFilter {
-      display: none;
+    .ag-font-style {
+      font-size: $font-size-smallest;
     }
 
-    #agHeaderCellLabel {
-      color: $brand-secondary;
-      font-weight: 600;
-    }
+    .ag-header-cell {
+      text-align: left;
 
-    #borderLayout_eGridPanel {
-      overflow: hidden !important;
-      overflow-y: auto !important;
-      padding-right: 1px;
-      padding-top: $padding-top;
+      .ag-header-cell-text {
+        color: $brand-secondary;
+        font-weight: 600;
+      }
     }
 
     [class^="fonticon-"]::before, [class*=" fonticon-"]::before, [class*="fonticon-"]::after, [class*=" fonticon-"]::after {
@@ -27,49 +22,36 @@
       margin-right: 7px;
     }
 
-    .ag-header-row {
-      height: $aggrid-row-height;
+    .ag-group-contracted,
+    .ag-group-expanded {
+      padding-left: 5px;
+    }
+
+    .ag-row-level-0 {
+      .ag-group-contracted,
+      .ag-group-expanded {
+        padding-left: 0;
+      }
     }
 
     .ag-cell {
       height: $aggrid-row-height;
-      padding-right: 1px;
-      white-space: nowrap;
-
-      > span {
-        //display: block;
-        height: $aggrid-row-height;
-        line-height: $aggrid-row-height;
-
-        > span.ag-group-value {
-          padding-right: 10px;
-        }
-      }
+      line-height: $aggrid-row-height;
+      overflow: visible;
+      span.ag-group-value {
+      padding-right: 10px;}
 
       i {
         color: $brand-secondary;
       }
     }
 
-    .ag-row-group {
-      padding-left: 5px;
-
-      &.ag-row-level-0 {
-        padding-left: 0;
-      }
-    }
-
     .ag-cell-range-selected {
       outline: none;
 
-      > span {
-        outline: none;
-
-        > span {
-          background: $brand-secondary;
-          color: $white;
-          outline: none;
-        }
+      > span > span {
+        background: $brand-secondary;
+        color: $white;
       }
 
       i {
@@ -78,15 +60,10 @@
     }
 
     .ag-overlay-loading-wrapper {
-      background: $white;
-      padding-bottom: $aggrid-row-height;
-      padding-top: 5px;
-    }
-
-    .ag-body-container {
-      //height: $project-picker-tree-height - 2px - $aggrid-row-height - $padding-top - 17px !important;
-      //2px is for the project picker border
-      //17px ??
+      font-size: $font-size-smallest;
+      padding-top: $aggrid-row-height;
+      text-align: left;
+      vertical-align: top;
     }
   }
 }
@@ -96,18 +73,20 @@
   height: 100%;
 
   .ag-grid {
-    font-size: $font-size-smallest;
     height: 100%;
-//    width: calc(#{$project-picker-tree} - 10px - 2px);
+    padding-top: 5px;
 
-    .ag-header {
-      display: none;
+    .ag-font-style {
+      font-size: $font-size-smallest;
     }
 
-    #borderLayout_eGridPanel {
-      overflow: hidden !important;
-      overflow-y: auto !important;
-      padding-top: 5px;
+    .ag-header-cell {
+      text-align: left;
+
+      .ag-header-cell-text {
+        color: $brand-secondary;
+        font-weight: 600;
+      }
     }
 
     [class^="fonticon-"]::before, [class*=" fonticon-"]::before, [class*="fonticon-"]::after, [class*=" fonticon-"]::after {
@@ -116,51 +95,41 @@
       margin-right: 7px;
     }
 
+    .ag-group-contracted,
+    .ag-group-expanded {
+      padding-left: 5px;
+    }
+
+    .ag-row-level-0 {
+      .ag-group-contracted,
+      .ag-group-expanded {
+        padding-left: 0;
+      }
+    }
+
     .ag-cell {
-      @include text-ellipsis-flex-width($project-picker-tree-width - $aggrid-row-height);
-      padding-right: 10px;
+      height: $aggrid-row-height;
+      line-height: $aggrid-row-height;
+      overflow: visible;
+      span.ag-group-value {
+        padding-right: 10px;}
 
       i {
         color: $brand-secondary;
       }
     }
 
-    .ag-row-group {
-      padding-left: 5px;
-
-      &.ag-row-level-0 {
-        padding-left: 0;
-      }
-    }
-
     .ag-cell-range-selected {
       outline: none;
 
-      > span {
-        display: block;
-        outline: none;
-
-        > span {
-          background: $brand-secondary;
-          color: $white;
-          display: block;
-          outline: none;
-        }
-
-        > span.ag-group-expand {
-          float: left;
-        }
+      > span > span {
+        background: $brand-secondary;
+        color: $white;
       }
 
       i {
         color: $white;
       }
-    }
-
-    .ag-overlay-loading-wrapper {
-      background: $white;
-      padding-bottom: $aggrid-row-height;
-      padding-top: 5px;
     }
   }
 }
